<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activities.HomePageActivity">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/ban_view_pager"
            android:layout_width="match_parent"
            android:layout_height="182dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

        <TextView
            android:id="@+id/popTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abeezee"
            android:text="@string/popTv"
            android:textColor="@color/black_txt"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/pop_rv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.082"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ban_view_pager"
            app:layout_constraintVertical_bias="0.54" />


        <!--        <TextView-->
<!--            android:id="@+id/textView3"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="28dp"-->
<!--            android:text="@string/view_all"-->
<!--            android:textColor="@color/colorAccent"-->
<!--            android:textSize="14sp"-->
<!--            app:layout_constraintBottom_toTopOf="@+id/dig_ev_vp"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="0.913"-->
<!--            app:layout_constraintStart_toEndOf="@+id/feat_eve_tv"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/pop_rv"-->
<!--            app:layout_constraintVertical_bias="0.0" />-->

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/pop_rv"
            android:layout_width="wrap_content"
            android:layout_height="370dp"
            android:layout_marginTop="50dp"
            android:scrollbars="horizontal"
            android:scrollbarSize="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ban_view_pager" />

        <TextView
            android:id="@+id/feat_eve_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/abeezee"
            android:text="@string/feat_list"
            android:textColor="@color/black_txt"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.085"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pop_rv" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:elevation="10dp"
            app:layout_constraintBottom_toTopOf="@+id/ban_view_pager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="58dp"
                android:layout_height="match_parent"
                app:srcCompat="@mipmap/ic_launcher_foreground" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/black_txt"
                android:textSize="18sp"
                android:textStyle="bold|italic" />
        </androidx.appcompat.widget.Toolbar>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/feat_rv"
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            android:layout_marginTop="16dp"
            android:scrollbars="horizontal"
            android:scrollbarSize="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/feat_eve_tv" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</layout>